# libhyscancore

./: CMakeLists.txt  Makefile  readme.md  translate.sh
doc/: Doxyfile  html_header  mainpage.doxy
hyscancore/: .hyscan-location.c  .hyscan-location.h  CMakeLists.txt  hyscan-acoustic-data.c  hyscan-acoustic-data.h  hyscan-amplitude-factory.c  hyscan-amplitude-factory.h  hyscan-amplitude-simple.c  hyscan-amplitude-simple.h  hyscan-amplitude.c  hyscan-amplitude.h  hyscan-cancellable.c  hyscan-cancellable.h  hyscan-cartesian.c  hyscan-cartesian.h  hyscan-const-depth.c  hyscan-const-depth.h  hyscan-control-proxy.c  hyscan-control-proxy.h  hyscan-control.c  hyscan-control.h  hyscan-convolution.c  hyscan-convolution.h  hyscan-core-common.c  hyscan-core-common.h  hyscan-core-exports.h  hyscan-core-marshallers.list  hyscan-core-params.c  hyscan-core-params.h  hyscan-core-resources.xml  hyscan-core-schemas.h  hyscan-core-types.c  hyscan-core-types.h  hyscan-data-channel-common.h  hyscan-data-channel-writer.c  hyscan-data-channel-writer.h  hyscan-data-channel.c  hyscan-data-channel.h  hyscan-data-estimator.c  hyscan-data-estimator.h  (+177 more)
hyscancore/po/: hyscancore.pot
hyscancore/po/ru/: hyscancore.po
misc/locale/ru/LC_MESSAGES/: hyscancore.mo
resources/: CMakeLists.txt  gga_test_data  location-schema.xml  location-test-data.xml  resources.xml  rmc_test_data  track-schema.xml
tests/: CMakeLists.txt  acoustic-data-test.c  cancellable-test.c  cartesian-test.c  control-test.c  convolution-test.c  data-channel-test.c  data-channel.c  data-player-test.c  data-writer-test.c  db-info-test.c  depth-nmea-test.c  depth-test.c  depthometer-test.c  factory-test.c  forward-look-data-test.c  forward-look-player-test.c  geo-test.c  gtk-map-track-item-test.c  hsx-converter-test.c  hyscan-convolution-test.c  hyscan-data-channel-test.c  hyscan-dummy-device.c  hyscan-dummy-device.h  hyscan-fl-gen.c  hyscan-fl-gen.h  hyscan-state-test.c  list-model-test.c  location-test-clean-track  location-test-resources.xml  location-test.c  mark-data-waterfall-test.c  mark-manager-test.c  mark-model-test.c  mercator-test.c  mloc-test.c  mman-test.c  nav-model-test.c  nav-smooth-test.c  navigation-model-test.c  (+24 more)
